--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 	font-family: serif;
 }
 header{
-	background-image:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(../2.png);
+	background-image:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(2.png);
 	height:100vh;
 	background-size: cover;
 	background-position: center;
